argocd/media/maintainerr/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr-deployment
  labels:
    app: maintainerr
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: maintainerr
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      containers:
      - name: maintainerr
        image: jorenn92/maintainerr:latest
        ports:
        - containerPort: 6246
        volumeMounts:
        - name: config
          mountPath: "/opt/data"
          readOnly: false
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: maintainerr-pvc
      dnsConfig:
        nameservers:
          - 8.8.8.8
        searches:
          - api.github.com
          - api.themoviedb.org
          - plex.tv
        options:
          - name: ndots
            value: "1"
