argocd/media/maintainerr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr-service
spec:
  selector:
    app: maintainerr
  ports:
    - protocol: TCP
      port: 6246
      targetPort: 6246
